--- a/package.json
+++ b/package.json
@@ -3,18 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev -H 0.0.0.0",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build": "next build"
+
   },
   "dependencies": {
+    "@capacitor/android": "^7.0.1",
+    "@capacitor/core": "^7.0.1",
+    "@capacitor/ios": "^7.0.1",
+    "chart.js": "^4.4.7",
+    "moment": "^2.30.1",
+    "next": "15.1.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^6.2.0",
+    "@types/node": "22.10.2",
+    "@types/react": "19.0.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.2"
   }
 }
